# ClientIQ

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  rough.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agentic/: agents_state.py  graph.py  llms_for_agents.py  tools.py
agentic/agents/: action_planner.py  analyst.py  critic.py  planner.py  report_gen.py  retriever.py  semantic_retriever.py
agentic/utils/: helper_fuctions.py
backend/: services.py
backend/api/: main.py
backend/api/routes/: chat_endpoint.py  data_endpoints.py  endpoints.py
backend/api/schemas/: endpoints.py
configs/: config.py  db_config.py
db_scripts/: data_insert.py  db_connect.py  tables.py
frontend/: app.py
logger/: __init__.py
rag/: save_emb_pipeline.py
rag/data_prep/: get_data.py  load_data.py
rag/retrievers/: semantic.py
rag/tools/: endpoint_tools.py
rag/vector_store/: embeddings.py  save_embeddings.py
