[project]
name = "ai-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "from-root>=1.3.0",
    "langchain>=1.3.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langgraph-cli[inmem]>=0.4.31",
    "langserve>=0.3.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.50",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
